--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Glassmorphism</title>
 </head>
 <body>
-    <div class="title">
+   <!-- <div class="title">
         <h1>glassmorphism.</h1>
-    </div>
+    </div> -->
     
     <div class="app-container">
         
