--- a/index.html
+++ b/index.html
@@ -33,8 +33,22 @@
             <div class="glass-configuration">
                 <p class="blur">Difuminado</p>
                 <div>
-                    <input id="blur" type="range" name="blur" min="0" max="15" step="0.5" value="2">
+                    <input id="blur" type="range" name="blur" min="0" max="15" step="1" value="2">
                     <output class="value-blur">2px</output>
+                </div>
+            </div>
+            <div class="glass-configuration">
+                <p class="saturation">Saturación</p>
+                <div>
+                    <input id="saturation" type="range" name="saturation" min="0" max="100" step="1" value="20">
+                    <output class="value-saturation">20%</output>
+                </div>
+            </div>
+            <div class="glass-configuration">
+                <p class="contrast">Contraste</p>
+                <div>
+                    <input id="contrast" type="range" name="contrast" min="0" max="100" step="1" value="20">
+                    <output class="value-contrast">20%</output>
                 </div>
             </div>
             <div class="glass-configuration">
@@ -52,6 +66,9 @@
                     <output class="value-radius">20px</output>
                 </div>
                 
+            </div>
+            <div class="css-code-container">
+                <!--Inyeccion de HTML desde JS-->
             </div>
         </div>
     </div>
