--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="glass-configuration">
                 <p class="opacity">Opacidad</p>
                 <div>
-                    <input id="opacity" type="range" name="opacity" min="0.01" max="1" step="0.01" value="0.58%">
-                    <output class="value-opacity">0.58%</output>
+                    <input id="opacity" type="range" name="opacity" min="0.01" max="1" step="0.01" value="0.1">
+                    <output class="value-opacity">0.1%</output>
                 </div>    
             </div>
             <div class="glass-configuration">
@@ -40,15 +40,15 @@
             <div class="glass-configuration">
                 <p class="saturation">Saturación</p>
                 <div>
-                    <input id="saturation" type="range" name="saturation" min="0" max="100" step="1" value="20">
-                    <output class="value-saturation">20%</output>
+                    <input id="saturation" type="range" name="saturation" min="0" max="100" step="1" value="70">
+                    <output class="value-saturation">70%</output>
                 </div>
             </div>
             <div class="glass-configuration">
                 <p class="contrast">Contraste</p>
                 <div>
-                    <input id="contrast" type="range" name="contrast" min="0" max="100" step="1" value="20">
-                    <output class="value-contrast">20%</output>
+                    <input id="contrast" type="range" name="contrast" min="0" max="100" step="1" value="70">
+                    <output class="value-contrast">70%</output>
                 </div>
             </div>
             <div class="glass-configuration">
