--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                 
             </div>
             <div class="css-code-container">
-                <!--Inyeccion de HTML desde JS-->
+                <p>Copia el código de CSS</p>
+                <div class="css-code">
+                    <!--Inyeccion de HTML desde JS-->
+                </div>
             </div>
         </div>
     </div>
