--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="app-right">
             <div class="glass-configuration">
                 <p>Selecciona un color:</p>
-                <input class="color" type="color" name="color">
+                <input class="color" type="color" name="color" value="#FFFFFF">
             </div>
             <div class="glass-configuration">
                 <p class="opacity">Opacidad</p>
